# Void

./: .gitignore  README.md  pyproject.toml  requirements.txt  void.py
config/: colors.py  keybinds.md  keys.py  settings.py
core/: buffer.py  editing.py  tab.py
features/: ai_assistant.py  file_finder.py  mcp_server.py  terminal.py  theme_engine.py
modes/: keybinds.py  search.py  vim_motions.py  visual.py
ui/: aesthetics.py  display.py  splash.py  syntax.py
