[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "void-editor"
version = "0.3.0"
description = "A modern cross-platform terminal code editor"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    { name = "Bailey Beber" },
    { name = "Soumalya Das" },
]

keywords = ["editor", "terminal", "vim", "tui", "textual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Text Editors",
]

dependencies = [
    "textual>=0.47.0",
    "rich>=13.7.0",
    "google-genai>=0.3.0",
]

[project.scripts]
void = "void:main_entry"

[project.urls]
Repository = "https://github.com/cryybash/Void"

[tool.setuptools]
py-modules = ["void"]

[tool.setuptools.packages.find]
include = ["config*", "core*", "features*", "modes*", "ui*"]

[tool.setuptools.package-data]
config = ["keybinds.md"]
